--- a/style1.css
+++ b/style1.css
@@ -7,7 +7,7 @@
 }
 .first-bg{
     
-    background-image: url( "mainBackground.png");
+    background-image: url( "C:\Users\Asus\OneDrive\PW FULL STACK WEB DEVELP\Module 35\mainBackground.png");
     
     
   top: 0; 
